Ugbire shareddata directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 GPLineChart.xcodeproj/xcuserdata
 GPLineChart.xcodeproj/project.xcworkspace/xcshareddata
+GPLineChart.xcodeproj/project.xcworkspace/xcuserdata
