--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-GPLineChart.xcodeproj/xcuserdata
-GPLineChart.xcodeproj/project.xcworkspace/xcshareddata
-GPLineChart.xcodeproj/project.xcworkspace/xcuserdata
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
