--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-pod "SwiftChart", :path => "../"
+target "SwiftChart_Example" do
+  platform :ios, "8.3"
+  pod "SwiftChart", :path => "../"
+end
